--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "format_version": 2,
     "header": {
-        "description": " An aesthetic shader for Minecraft!\n \n v1.1.89b  §3https://mcpedl.com/newb-shader/",
-        "name": "Newb Shader",
-        "uuid": "95f774cf-4afa-73e7-a21a-72146307b1d2",
+        "description": " A lighter version of Newb Shader!\n \n v1.1.89L  §3https://mcpedl.com/newb-shader/",
+        "name": "Newb Shader Lite",
+        "uuid": "95f174cf-4afa-73e7-a21a-12346207b1d2",
         "version": [1, 1, 895],
         "min_engine_version": [1, 14, 10]
     },
@@ -11,7 +11,7 @@
         {
             "description": " An aesthetic shader for Minecraft!",
             "type": "resources",
-            "uuid": "900f3d8b-37b4-465f-8f56-941687e36c35",
+            "uuid": "900f3d7b-37b4-462f-7f56-181687e46c35",
             "version": [1, 1, 895]
         }
     ],
