--- a/biomes_client.json
+++ b/biomes_client.json
@@ -1,6 +1,4 @@
 /*
- - water_surface_color is used to calculate water properties and to detect water:
-    (R-Tint,G-Lightness,B-Detection)
  - water_fog_color is used to detect underwater
     (incomplete - to do biome coloring)
  - end fog_color color uses a special color to help in detection of end
@@ -8,285 +6,288 @@
 {
   "biomes": {
     "default": {
-      "water_surface_color": "#7FBF00",
-      "water_surface_transparency": 0.1,
+      "water_surface_color": "#44AFF5",
+      "water_surface_transparency": 0.05,
       "water_fog_color": "#0000FF",
-      "water_fog_distance": 20,
+      "water_fog_distance": 15,
       "fog_color": "#ABD2FF"
     },
     "plains": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#44AFF5",
       "water_fog_color": "#0000FF"
     },
     "sunflower_plains": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#44AFF5",
       "water_fog_color": "#0000FF"
     },
     "desert": {
-      "water_surface_color": "#AAFB00",
+      "water_surface_color": "#32A598",
       "water_fog_color": "#0000FF"
     },
     "extreme_hills": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#007BF7",
       "water_fog_color": "#0000FF"
     },
     "forest": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#1E97F2",
       "water_fog_color": "#0000FF"
     },
     "flower_forest": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#20A3CC",
       "water_fog_color": "#0000FF"
     },
     "taiga": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#287082",
       "water_fog_color": "#0000FF"
     },
     "taiga_mutated": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#1E6B82",
       "water_fog_color": "#0000FF"
     },
     "swampland": {
-      "water_surface_color": "#00BF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 8
+      "water_surface_color": "#4c6559",
+      "water_surface_transparency": 1.0,
+      "water_fog_distance": 8,
+      "water_fog_color": "#0000FF"
     },
     "swampland_mutated": {
-      "water_surface_color": "#00BF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 8
+      "water_surface_color": "#4c6156",
+      "water_surface_transparency": 1.0,
+      "water_fog_distance": 8,
+      "water_fog_color": "#0000FF"
     },
     "river": {
-      "water_surface_color": "#7FBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 30
+      "water_surface_color": "#0084FF",
+      "water_fog_distance": 30,
+      "water_fog_color": "#0000FF"
     },
     "hell": {
-      "water_surface_color": "#7FBF00",
-      "water_fog_color": "#0000FF",
-      "fog_color": "#330808"
+      "water_surface_color": "#905957",
+      "fog_color": "#330808",
+      "water_fog_color": "#0000FF"
     },
     "the_end": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "fog_color": "#400040"
+      "water_surface_color": "#62529e",
+      "fog_color": "#400040",
+      "water_fog_color": "#0000FF"
     },
     "frozen_river": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 20
+      "water_surface_color": "#185390",
+      "water_fog_distance": 20,
+      "water_fog_color": "#0000FF"
     },
     "ice_plains": {
-      "water_surface_color": "#FFBF00",
+      "water_surface_color": "#14559b",
       "water_fog_color": "#0000FF"
     },
     "ice_plains_spikes": {
-      "water_surface_color": "#FFBF00",
+      "water_surface_color": "#14559b",
       "water_fog_color": "#0000FF"
     },
     "ice_mountains": {
-      "water_surface_color": "#FFBF00",
+      "water_surface_color": "#1156a7",
       "water_fog_color": "#0000FF"
     },
     "mushroom_island": {
-      "water_surface_color": "#7FAA00",
+      "water_surface_color": "#8a8997",
       "water_fog_color": "#0000FF"
     },
     "mushroom_island_shore": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#818193",
       "water_fog_color": "#0000FF"
     },
     "beach": {
-      "water_surface_color": "#FFFF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#157cab",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "desert_hills": {
-      "water_surface_color": "#FFBF00",
+      "water_surface_color": "#1a7aa1",
       "water_fog_color": "#0000FF"
     },
     "forest_hills": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#056bd1",
       "water_fog_color": "#0000FF"
     },
     "taiga_hills": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#236583",
       "water_fog_color": "#0000FF"
     },
     "extreme_hills_edge": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#045cd5",
       "water_fog_color": "#0000FF"
     },
     "jungle": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#14A2C5",
       "water_fog_color": "#0000FF"
     },
     "bamboo_jungle": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#14A2C5",
       "water_fog_color": "#0000FF"
     },
     "jungle_mutated": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#1B9ED8",
       "water_fog_color": "#0000FF"
     },
     "jungle_hills": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#1B9ED8",
       "water_fog_color": "#0000FF"
     },
     "bamboo_jungle_hills": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#1B9ED8",
       "water_fog_color": "#0000FF"
     },
     "jungle_edge": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#0D8AE3",
       "water_fog_color": "#0000FF"
     },
     "stone_beach": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#0d67bb",
       "water_fog_color": "#0000FF"
     },
     "cold_beach": {
-      "water_surface_color": "#AABF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 50
+      "water_surface_color": "#1463a5",
+      "water_fog_distance": 50,
+      "water_fog_color": "#0000FF"
     },
     "birch_forest": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#0677ce",
       "water_fog_color": "#0000FF"
     },
     "birch_forest_hills": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#0a74c4",
       "water_fog_color": "#0000FF"
     },
     "roofed_forest": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#3B6CD1",
       "water_fog_color": "#0000FF"
     },
     "cold_taiga": {
-      "water_surface_color": "#AABF00",
+      "water_surface_color": "#205e83",
       "water_fog_color": "#0000FF"
     },
     "cold_taiga_mutated": {
-      "water_surface_color": "#AABF00",
+      "water_surface_color": "#205e83",
       "water_fog_color": "#0000FF"
     },
     "cold_taiga_hills": {
-      "water_surface_color": "#AABF00",
+      "water_surface_color": "#245b78",
       "water_fog_color": "#0000FF"
     },
     "mega_taiga": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#2d6d77",
       "water_fog_color": "#0000FF"
     },
     "mega_spruce_taiga": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#2d6d77",
       "water_fog_color": "#0000FF"
     },
     "mega_taiga_mutated": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#2d6d77",
       "water_fog_color": "#0000FF"
     },
     "mega_spruce_taiga_mutated": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#2d6d77",
       "water_fog_color": "#0000FF"
     },
     "mega_taiga_hills": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#286378",
       "water_fog_color": "#0000FF"
     },
     "extreme_hills_plus_trees": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#0E63AB",
       "water_fog_color": "#0000FF"
     },
     "extreme_hills_plus_trees_mutated": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#0E63AB",
       "water_fog_color": "#0000FF"
     },
     "extreme_hills_mutated": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#0E63AB",
       "water_fog_color": "#0000FF"
     },
     "savanna": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#2C8B9C",
       "water_fog_color": "#0000FF"
     },
     "savanna_plateau": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#2590A8",
       "water_fog_color": "#0000FF"
     },
     "savanna_mutated": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#2590A8",
       "water_fog_color": "#0000FF"
     },
     "mesa": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#4E7F81",
       "water_fog_color": "#0000FF"
     },
     "mesa_bryce": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#497F99",
       "water_fog_color": "#0000FF"
     },
     "mesa_mutated": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#497F99",
       "water_fog_color": "#0000FF"
     },
     "mesa_plateau_stone": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#55809E",
       "water_fog_color": "#0000FF"
     },
     "mesa_plateau": {
-      "water_surface_color": "#7FBF00",
+      "water_surface_color": "#55809E",
       "water_fog_color": "#0000FF"
     },
     "ocean": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#1787D4",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "deep_ocean": {
-      "water_surface_color": "#FFAA00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#1787D4",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "warm_ocean": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#02B0E5",
+      "water_surface_transparency": 0.1,
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "deep_warm_ocean": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#02B0E5",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "lukewarm_ocean": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#0D96DB",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "deep_lukewarm_ocean": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#0D96DB",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "cold_ocean": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#2080C9",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "deep_cold_ocean": {
-      "water_surface_color": "#FFAA00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#2080C9",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "frozen_ocean": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#2570B5",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     },
     "deep_frozen_ocean": {
-      "water_surface_color": "#FFBF00",
-      "water_fog_color": "#0000FF",
-      "water_fog_distance": 60
+      "water_surface_color": "#2570B5",
+      "water_fog_distance": 60,
+      "water_fog_color": "#0000FF"
     }
   }
 }
