--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
         "description": " An aesthetic shader for Minecraft!\n \n v1.2.0beta  §3https://mcpedl.com/newb-shader/",
         "name": "Newb Shader",
         "uuid": "95f774cf-4afa-73e7-a21a-72146307b1d2",
-        "version": [1, 1, 96],
+        "version": [1, 1, 97],
         "min_engine_version": [1, 14, 10]
     },
     "modules": [
@@ -12,11 +12,11 @@
             "description": " An aesthetic shader for Minecraft!",
             "type": "resources",
             "uuid": "900f3d8b-37b4-465f-8f56-941687e36c35",
-            "version": [1, 1, 96]
+            "version": [1, 1, 97]
         }
     ],
     "metadata": {
-        "authors": ["VeteranDev"],
+        "authors": ["devendrn"],
         "license": "MIT License",
         "url": "https://mcpedl.com/newb-shader/"
     }
